--- a/program/Makefile
+++ b/program/Makefile
@@ -37,6 +37,9 @@ run:
 	@mkdir -p data/tabls
 	./scripts/menu.sh
 
+test:
+	./bin/myapp 30 2
+
 lss:
 	@echo "\033[0;34mbin  build  config  data  scripts  src\033[0m  makefile  \033[0;34moutput  doc\033[0m"
 
@@ -45,5 +48,5 @@ clean:
 	rm -rf build/*.o $(TARGET)
 	@echo "🧹 Очистка завершена."
 
-.PHONY: all clean run lss
+.PHONY: all clean run lss test
 
